fix: heights on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -69,7 +69,7 @@ body {
 }
 
 .App {
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   background: var(--bg);
